Fix whitespace

--- a/styles/forms.css
+++ b/styles/forms.css
@@ -290,9 +290,7 @@ input[type=range] {
   and https://github.com/twbs/bootstrap/issues/11266 */
  { -webkit-appearance: listbox }
 
-input[list] {
-  /* combobox */
-}
+input[list] { /* combobox */ }
 
 input[type=file] {
   height: 0;
